// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spacer component should render with custom height of 32px 1`] = `
.c0 {
  height: 32px;
}

<div
  className="c0"
  size={32}
/>
`;

exports[`spacer component should render with default height 1`] = `
.c0 {
  height: 16px;
}

<div
  className="c0"
/>
`;
